# cost-management-api

./: .gitignore  Cargo.toml
src/: main.rs
src/folders/: mod.rs
src/folders/database/: delete_folder.rs  get_folders.rs  mod.rs  post_folder.rs  put_folder.rs
src/folders/dto/: dtos.rs
src/folders/entity/: entities.rs
src/income/: mod.rs
src/income/database/: delete_income.rs  get_incomes.rs  mod.rs  post_income.rs
src/income/dto/: dtos.rs
src/income/entity/: entities.rs
src/invite/database/: get_invites.rs  mod.rs  patch_invite.rs  post_invite.rs
src/invite/dto/: dtos.rs
src/invite/entity/: entities.rs
src/utils/: database.rs  database_utils.rs  mod.rs  responses.rs
src/utils/notification/: entities.rs  mod.rs  notifications.rs
